# gate0

./: Cargo.toml  README.md  SECURITY.md  ephemera_gate0_integration.md
.github/workflows/: ci.yml
docs/: SECURITY_MODEL.md
docs/adr/: 001-adoption-of-gate0-bridge.md
examples/: saas_api_dsl.rs
gate0_dsl/: Cargo.toml
gate0_dsl/examples/: basic_usage.rs  saas_api_dsl.rs
gate0_dsl/src/: lib.rs
gatebridge/: .gitignore  README.md
gatebridge/src/: ast.rs  fuzz.rs  lib.rs  main.rs  reference_eval.rs  shadow.rs  translate.rs
src/: fixed_stack.rs  lib.rs  macros.rs  policy.rs
