[package]
name = "gate0"
version = "0.1.0"
edition = "2021"
authors = ["Gate0 Contributors"]
description = "A small, auditable, terminating, deterministic micro-policy engine"
license = "MIT"
readme = "README.md"
keywords = ["authorization", "policy", "security", "rbac", "abac"]
categories = ["authentication"]
repository = "https://github.com/Qarait/gate0"
homepage = "https://github.com/Qarait/gate0"

[dependencies]
# Zero dependencies. Intentional.

[features]
default = []
safe-stack = []  # Use SafeFixedStack (no unsafe, O(capacity) init)

[dev-dependencies]
proptest = "1.6"

[lib]
name = "gate0"
path = "src/lib.rs"
