[package]
name = "gate0"
version = "0.2.0"
edition = "2021"
authors = ["Gate0 Contributors"]
description = "A small, auditable, terminating, deterministic micro-policy engine"
license = "MIT"
readme = "README.md"
keywords = ["authorization", "policy", "security", "rbac", "abac"]
categories = ["authentication"]
repository = "https://github.com/Qarait/gate0"
homepage = "https://github.com/Qarait/gate0"

[dependencies]
gate0_dsl = { version = "0.1.0", path = "gate0_dsl", optional = true }
# Zero external dependencies. Intentional.

[features]
default = []
safe-stack = []  # Use SafeFixedStack (no unsafe, O(capacity) init)
dsl = ["dep:gate0_dsl"]

[dev-dependencies]
proptest = "1.6"

[lib]
name = "gate0"
path = "src/lib.rs"

[workspace]
members = [
    "gate0_dsl",
]